--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.2
 Flask-Cors==4.0.0
-requests==2.31.0blinker==1.6.2
+requests==2.31.0
+blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
